--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
       <div class="hero-container" data-aos="fade-in">
         <h1>Salma Oumoussa</h1>
         <p>
-          I'm
+          I'm familiar with
           <span
             class="typed"
-            data-typed-items="Designer, Developer, Freelancer, Photographer"
+            data-typed-items="JavaScript (ES6), PHP, Java Swing(Awt) ,java GUI ,C-C++ ,Ajax ,Html5 ,Css3 ,JSON ,Python ,SQL, PL-SQL, ReactJS, SGBDR-ORACLE ,SGBDR-MYSQL"
           ></span>
         </p>
       </div>
@@ -226,7 +226,10 @@
         <div class="container">
           <div class="section-title">
             <h2>Skills</h2>
-            <p>Bei</p>
+            <p>
+              Throughout my thought academic curriculum, I state confidently
+              that I acquired these skills
+            </p>
           </div>
 
           <div class="row skills-content">
@@ -520,7 +523,7 @@
                 </div>
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d640.848730871244!2d-7.543648631994058!3d33.571252968562064!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd39c99e23a7%3A0x143e18c379d0dd63!2zUsOpc2lkZW5jZSBhbGhvZGEg2KPZgtin2YXYqSDYp9mE2YfYr9mJ!5e0!3m2!1sfr!2sma!4v1649716975404!5m2!1sfr!2sma"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
