my protfolio vf

--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@
         </div>
       </section>
       <!-- End Resume Section -->
+      <div class="text-center">
+        <a
+          href="./assets/img/CV_OumoussaSalma.pdf "
+          download="CV_OumoussaSalma.pdf"
+          target="_blank"
+        >
+         <u> <h5 >Download my resume</h5></a></u>
+        
+      </div>
 
       <!-- ======= Services Section ======= -->
       <section id="services" class="services">
