NEW intership at LeanSoft Company

--- a/index.html
+++ b/index.html
@@ -404,6 +404,21 @@
                   </li>
                 </ul>
               </div>
+              <div class="resume-item">
+                <h4>GRADUATION INTERNSHIP - LeanSoft company</h4>
+                <h5>April 2022 : NOW</h5>
+                <p>
+                  <em
+                    >Technopole 2, Lotissement Founty, Bloc E, 3éme étage, Bureau EB304, Agadir 80000
+                  </em>
+                </p>
+                <ul>
+                  <li>
+                    Study and Design of Customer RelationShip Management System
+                  </li>
+    
+                </ul>
+              </div>
             </div>
           </div>
         </div>
