NEW intership at LeanSoft Company

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 </p>
                 <ul>
                   <li>
-                    Study and Design of Quality Management Systems of quality
+                    Study and Design of Quality Management Systems 
                   </li>
                   <li>
                     Elaboration of functional specifications of the system
